--- a/P1/P1.tex
+++ b/P1/P1.tex
@@ -1,2 +1,6 @@
 \part{Bases de la programmation impérative et fonctionnelle}
+
+Dans cette partie nous allons découvrir ce qu’est la programmation impérative et
+fonctionnelle et acquérir les bases de l’algorithmie.
+
 \input{\TSwiftRoot/P1/CH1/CH1}
