Adds an assembler snipet in the first chapter, configures minted

--- a/Conf.tex
+++ b/Conf.tex
@@ -7,7 +7,10 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
+\usepackage{hyperref}
 
+\usepackage{minted}
+\usemintedstyle{xcode}
 
 \author{Guillaume DIDIER}
 \newcommand{\TSwiftTitle}[0]{Apprendre à programmer sur OS X en Swift avec Xcode}
