Adds TextWrangler Screenshot

--- a/Conf.tex
+++ b/Conf.tex
@@ -9,6 +9,9 @@
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \usepackage{hyperref}
 
+\usepackage{graphicx}
+\DeclareGraphicsExtensions{.pdf,.png,.jpg}
+
 \usepackage{minted}
 \usemintedstyle{xcode}
 
