Minor enhancements of Chapter 1

--- a/Conf.tex
+++ b/Conf.tex
@@ -7,7 +7,8 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref} % colorlinks=true
+%\usepackage{tikz}
 
 \usepackage{graphicx}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
