--- a/TutorielSwift.tex
+++ b/TutorielSwift.tex
@@ -9,10 +9,13 @@
 \maketitle
 
 % Insert summary/intro here.
-
+\frontmatter
 \tableofcontents
 
+\mainmatter
 \input{\TSwiftRoot/P1/P1}
+\backmatter
 
+\appendix
 
 \end{document}
