--- a/P1/CH1/CH1.tex
+++ b/P1/CH1/CH1.tex
@@ -118,6 +118,7 @@ Il s'agit (comme vous l'avez tous deviné) d'un programme qui traduit notre code
 langage de haut niveau, appelé \emph{code source}, en code binaire. On l'appelle le
 \emph{compilateur}.
 
+%\input{\TSwiftRoot/P1/CH1/img/Compilateur/Compilateur}
 
 Le deuxième outil est celui qui permet d'éditer le code (les plus malins m'auront vu venir).
 
@@ -126,7 +127,7 @@ TextEdit, pourrait suffire. Cependant les programmeurs utilisent en général de
 dédiés qui possèdent des fonctionnalités supplémentaires, comme la coloration du code.
 \begin{figure}[H]
 \includegraphics[scale=0.5]{\TSwiftRoot/P1/CH1/img/TextWrangler}
-\caption{TextWrangler, un editeur de text gratuit pour Mac, d'excellente facture}
+\caption{TextWrangler, un éditeur de text gratuit pour Mac, d'excellente facture}
 \end{figure}
 Enfin un troisième outil est un debugger, qui permet de contrôler l'exécution pas à pas du
 programme, pour comprendre pourquoi ça ne marche pas. (En théorie, si l'on ne faisait
