--- a/P1/P1.tex
+++ b/P1/P1.tex
@@ -4,3 +4,4 @@ Dans cette partie nous allons découvrir ce qu’est la programmation impérativ
 fonctionnelle et acquérir les bases de l’algorithmie.
 
 \input{\TSwiftRoot/P1/CH1/CH1}
+\input{\TSwiftRoot/P1/CH2/CH2}
