--- a/Conf.tex
+++ b/Conf.tex
@@ -2,7 +2,8 @@
 \documentclass[11pt,a4paper,oneside]{book}
 \usepackage[utf8]{inputenc}
 \usepackage[francais]{babel}
-\usepackage[T1]{fontenc}
+\usepackage{fontspec} % Required by french.
+%\usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
