Uses minted 2 (alpha) with cache, and tabu.
Ignores additional cache files.

--- a/Conf.tex
+++ b/Conf.tex
@@ -9,12 +9,15 @@
 \usepackage{amssymb}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \usepackage[hidelinks]{hyperref} % colorlinks=true
+
+\usepackage{longtable}
+\usepackage{tabu}
 %\usepackage{tikz}
 
 \usepackage{graphicx}
 \DeclareGraphicsExtensions{.pdf,.png,.jpg}
 
-\usepackage{minted}
+\usepackage[cache]{minted}
 \usemintedstyle{xcode}
 
 \author{Guillaume DIDIER}
