--- a/P1/P1.tex
+++ b/P1/P1.tex
@@ -5,3 +5,4 @@ fonctionnelle et acquérir les bases de l’algorithmie.
 
 \input{\TSwiftRoot/P1/CH1/CH1}
 \input{\TSwiftRoot/P1/CH2/CH2}
+\input{\TSwiftRoot/P1/CH3/CH3}
