Minor rephrasing in the first two chapters.

--- a/P1/CH1/CH1.tex
+++ b/P1/CH1/CH1.tex
@@ -92,6 +92,8 @@ q_atomic_increment:
 C'est pour cela que l'on a inventé d'autres langages de programmation, de plus en plus
 élaborés, qui sont ensuite traduits par un autre programme en code binaire.
 
+Ces langages sont un compromis entre la compréhension par l'homme et celle par l'ordinateur, ce qui nécessite donc une certaine rigueur.
+
 L'un des langage ayant marqué l'informatique est le langage \emph{C}.
 
 On classe donc les langages selon leur niveau d'abstraction par rapport au
