--- a/P1/CH2/CH2.tex
+++ b/P1/CH2/CH2.tex
@@ -61,16 +61,18 @@ Il s’agit du premier programme que l’on montre par convention dans un nouvea
 « Hello, World ! », qui affiche à l’écran le texte en question.
 
 La première ligne de code est un commentaire (ignoré royalement par le compilateur)
-notion que nous étudieront dans la prochaine partie, la deuxième la ligne qui affiche le
+notion que nous étudieront dans la prochaine section, la deuxième la ligne qui affiche le
 texte << Hello, Playground ! >> (sans les guillemets à l’écran).
 On reviendra plus en détail sur cette ligne plus tard, mais je tenait à vous présenter ce
 programme, qui est plutôt court dans ce langage (1 ligne en Swift, contre 4 lignes en C).
 
 Vous pouvez remplacer le texte entre guillemet par le texte que vous voulez.
 
-println est la fonction qui est chargé d’afficher à l’écran une ligne de texte.
+\mintinline{swift}{println} est la fonction qui est chargé d’afficher à l’écran une ligne de texte.
 
-Cette ligne de code correspond à une instruction.
+Cette ligne de code correspond à une \emph{instruction}.
+Il est possible de mettre \emph{plusieurs} instructions par lignes à condition de laes séparer par des points virgule\verb";".
+
 Un playground est un outil très puissant de Xcode puisqu’il permet de voir immédiatement
 les conséquences d’une modification du code.
 \section{Les Commentaires}
